--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,21 @@
     <groupId>ma.dxc</groupId>
     <artifactId>java-maven-docker</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+<build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jar-plugin</artifactId>
+      <version>3.2.0</version>
+      <configuration>
+        <archive>
+          <manifest>
+            <mainClass>ma.dxc.App</mainClass>
+          </manifest>
+        </archive>
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
 
 </project>
